@@ -1,3 +1,9 @@
+2004-12-06  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/callbacks.c: (get_icon_for_device), (add_new_disks): Doesn't crash if
+	gnome_vfs_volume_monitor_get_volume_for_path returns NULL.
+	Closes #160560.
+
 2004-11-30  Benoît Dejean  <tazforever@dlfp.org>
 
 	* configure.in: post-release bump to 2.9.1.
